fix: circle button icon sizing and alignment

--- a/components/button/snice-button.css
+++ b/components/button/snice-button.css
@@ -390,8 +390,16 @@
 .button--circle .icon {
   margin: 0;
   transform: none;
+  width: auto;
+  height: auto;
 }
 
 .button--circle .icon-slot ::slotted(*) {
-  font-size: 1.125em;
+  width: auto;
+  height: auto;
+  font-size: 1.25em;
+  line-height: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
